--- a/vivliografiki_template2/sigproc.bib
+++ b/vivliografiki_template2/sigproc.bib
@@ -425,3 +425,106 @@
  address = {New York, NY, USA},
  keywords = {graph-based classification, hashtag, sentiment analysis, twitter},
 } 
+
+@article{han2014text,
+  title={Text-based twitter user geolocation prediction},
+  author={Han, Bo and Cook, Paul and Baldwin, Timothy},
+  journal={Journal of Artificial Intelligence Research},
+  volume={49},
+  pages={451--500},
+  year={2014}
+}
+
+@inproceedings{compton2014geotagging,
+  title={Geotagging one hundred million twitter accounts with total variation minimization},
+  author={Compton, Ryan and Jurgens, David and Allen, David},
+  booktitle={Big Data (Big Data), 2014 IEEE International Conference on},
+  pages={393--401},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{mcgee2013location,
+  title={Location prediction in social media based on tie strength},
+  author={McGee, Jeffrey and Caverlee, James and Cheng, Zhiyuan},
+  booktitle={Proceedings of the 22nd ACM international conference on Information \& Knowledge Management},
+  pages={459--468},
+  year={2013},
+  organization={ACM}
+}
+
+@article{jurgens2013s,
+  title={That's What Friends Are For: Inferring Location in Online Social Media Platforms Based on Social Relationships.},
+  author={Jurgens, David},
+  journal={ICWSM},
+  volume={13},
+  pages={273--282},
+  year={2013}
+}
+
+@inproceedings{rout2013s,
+  title={Where's@ wally?: a classification approach to geolocating users based on their social ties},
+  author={Rout, Dominic and Bontcheva, Kalina and Preo{\c{t}}iuc-Pietro, Daniel and Cohn, Trevor},
+  booktitle={Proceedings of the 24th ACM Conference on Hypertext and Social Media},
+  pages={11--20},
+  year={2013},
+  organization={ACM}
+}
+
+@article{li2012multiple,
+  title={Multiple location profiling for users and relationships from social network and content},
+  author={Li, Rui and Wang, Shengjie and Chang, Kevin Chen-Chuan},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={11},
+  pages={1603--1614},
+  year={2012},
+  publisher={VLDB Endowment}
+}
+
+@article{kong2014spot,
+  title={Spot: Locating social media users based on social network context},
+  author={Kong, Longbo and Liu, Zhi and Huang, Yan},
+  journal={Proceedings of the VLDB Endowment},
+  volume={7},
+  number={13},
+  pages={1681--1684},
+  year={2014},
+  publisher={VLDB Endowment}
+}
+
+@inproceedings{li2012towards,
+  title={Towards social user profiling: unified and discriminative influence model for inferring home locations},
+  author={Li, Rui and Wang, Shengjie and Deng, Hongbo and Wang, Rui and Chang, Kevin Chen-Chuan},
+  booktitle={Proceedings of the 18th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1023--1031},
+  year={2012},
+  organization={ACM}
+}
+
+@article{davis2011inferring,
+  title={Inferring the location of twitter messages based on user relationships},
+  author={Davis Jr, Clodoveu A and Pappa, Gisele L and de Oliveira, Diogo Renn{\'o} Rocha and de L Arcanjo, Filipe},
+  journal={Transactions in GIS},
+  volume={15},
+  number={6},
+  pages={735--751},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{huberman2008social,
+  title={Social networks that matter: Twitter under the microscope},
+  author={Huberman, Bernardo A and Romero, Daniel M and Wu, Fang},
+  year={2008}
+}
+
+@article{blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
