small corrections in conclusion

--- a/vivliografiki_template2/sig-alternate-sample.tex
+++ b/vivliografiki_template2/sig-alternate-sample.tex
@@ -495,7 +495,7 @@ The model that is proposed finds that using a maximum likelihood approach with t
 \section{Conclusion}
 Recent years have witnessed an increasing research interest in analyzing tweets. This interest is a result of the large amount of messages that are posted everyday in Twitter and that contain valuable information for a number of different topics. Event detection aims at finding real-world occurrences that unfold over space and time. As a fast-growing microblogging and online social networking service, Twitter provides
 unprecedentedly valuable user-generated content that can be transformed into actionable and situational knowledge. A considerable effort is still required to achieve efficient and reliable event detection systems. Some of them are the designing of better feature extraction and query generation techniques, more accurate filtering and detection algorithms, improved techniques to combine and analyze information from multiple sources (social and traditional media) and multiple languages, and enhanced summarization and visualization approaches. As for sentiment extraction, methods from the machine-learning field are applied for TSA on a more frequent rate compared to the rest of the approaches, with the SVM and NB classifiers being the most prevalent. Unigram-based SVM is usually considered as a baseline to which the proposed methods are compared. Moreover, lexicons are utilized in a large set of proposed methods to support detecting words that indicate sentiment. SentiWordNet and MPQA are the most used lexicons that are usually extended with words that are used in Twitter. Continuing, location information on Twitter is available through geotagged tweets indicating the current location of the user at the time of tweeting. However, geotagging is not a default setting and thus rarely used. Accurate user geolocation is a key driver for location-specific services such as localised search, and has been
-the target of research across different disciplines. One of the most reliable and straightforward approaches to geolocation prediction is IP-based methods, but in many contexts, it is not possible to access the IP of the device used to post content, or the IP is relatively uninformative (as is the case with, e.g. mobile devices). A new-entry algorithm finds the location of a user at different granularities. Many models was trained on this approach. The best model predicts a user's location, using as a training set only the places of users' tweets. The location of a person's can also be predicted using the activity of their friends' network, in Facebook. This method first analyze friendship as a function of distance and rank and generate several observations regarding the interplay of geography and friendship. They find that at medium to long-range distances, the probability of friendship is roughly proportional to the inverse of distance. Then they present an algorithm to predict the physical location of a user, given the known location of her friends. The most interesting part is the comparison of the state-of-the-art techniques in the geolocation prediction. The authors considered that the results was under controversial conditions in order to make right conclusions, so they tried a comparison among them. To conclude since the data mining regarding the social media is at a primary stage, further work must be done in order to provide more accurate methods and techniques in the future.
+the target of research across different disciplines. One of the most reliable and straightforward approaches to geolocation prediction is IP-based methods, but in many contexts, it is not possible to access the IP of the device used to post content, or the IP is relatively uninformative (as is the case with, e.g. mobile devices). A new-entry algorithm finds the location of a user at different granularities. Many models were trained on this approach. The best model predicts a user's location, using as a training set only the places of a users' tweets. The location of a person can also be predicted using the activity of their friends' network. This method first analyzes friendship as a function of distance and rank and generates several observations regarding the interplay of geography and friendship. They find that at medium to long-range distances, the probability of friendship is roughly proportional to the inverse of distance. Then they present an algorithm to predict the physical location of a user, given the known location of his friends. The most interesting part is the comparison of the state-of-the-art techniques in the geolocation prediction. The authors consider that the results are under controversial conditions and in order to make right conclusions they tried a comparison among them. To conclude, since the data mining regarding the social media is at a primary stage, further work must be done in order to provide more accurate methods and techniques in the future.
 
 
 \bibliographystyle{abbrv}
