--- a/final report/document.tex
+++ b/final report/document.tex
@@ -42,8 +42,8 @@
 \title{Report on Twitter topic detection and analysis}
 \author{
 Alex Tsilingiris \\
-kopoume \\
-kopoume 2\\
+Christina Pardalidou \\
+Sotiris Karapostolakis \\
 }
 
 \begin{document}
@@ -53,7 +53,7 @@ kopoume 2\\
 Text
 \chapter{Main}
 \section{Section}
-kopoume tha
+Test
 
 \bibliographystyle{abbrv}
 \bibliography{sigproc}
