--- a/final report/document.tex
+++ b/final report/document.tex
@@ -51,8 +51,20 @@ Sotiris Karapostolakis \\
 \tableofcontents
 \chapter{Introduction}
 Text
-\chapter{Main}
-\section{Section}
+\chapter{Model description}
+\section*{Section}
+Test
+
+\chapter{Method implementation details}
+\section*{Section}
+Test
+
+\chapter{Sample results}
+\section*{Section}
+Test
+
+\chapter{Software implementation details}
+\section*{Section}
 Test
 
 \bibliographystyle{abbrv}
