--- a/final report/sigproc.bib
+++ b/final report/sigproc.bib
@@ -1,3 +1,9 @@
+@Misc{projectwebsite,
+	howpublished = {\url{http://snf-755277.vm.okeanos.grnet.gr/}},
+	title = {Project website},
+	author = {Website}
+}
+
 @inproceedings{petrovic2010streaming,
 	title={Streaming first story detection with application to twitter},
 	author={Petrovi{\'c}, Sa{\v{s}}a and Osborne, Miles and Lavrenko, Victor},
